.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:50:07 **** Build of configuration Debug for project 0-led-toggle-addr ****
make -j16 all 
arm-none-eabi-gcc -mcpu=cortex-m0 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f030r8tx.d" -MT"Startup/startup_stm32f030r8tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f030r8tx.o" "../Startup/startup_stm32f030r8tx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DSTM32F030R8Tx -DSTM32 -DSTM32F0 -DNUCLEO_F030R8 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DSTM32F030R8Tx -DSTM32 -DSTM32F0 -DNUCLEO_F030R8 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DSTM32F030R8Tx -DSTM32 -DSTM32F0 -DNUCLEO_F030R8 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:37:6: error: 'GPIO_MODER' undeclared (first use in this function); did you mean 'GPIOA_MODER'?
   37 |      GPIO_MODER |= (1U<<10); /* bit 10 to 1 */
      |      ^~~~~~~~~~
      |      GPIOA_MODER
../Src/main.c:37:6: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.
21:50:52 **** Incremental Build of configuration Debug for project 0-led-toggle-addr ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DSTM32F030R8Tx -DSTM32 -DSTM32F0 -DNUCLEO_F030R8 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "0-led-toggle-addr.elf" @"objects.list"   -mcpu=cortex-m0 -T"/home/rgr/Dropbox/homefiles/directories/development/education/Udemy/embedded-systems-bare-metal-programming/stm32f030r8/0-led-toggle-addr/STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0-led-toggle-addr.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0-led-toggle-addr.elf
 
arm-none-eabi-size   0-led-toggle-addr.elf 
arm-none-eabi-objdump -h -S  0-led-toggle-addr.elf  > "0-led-toggle-addr.list"
arm-none-eabi-objcopy  -O binary  0-led-toggle-addr.elf  "0-led-toggle-addr.bin"
   text	   data	    bss	    dec	    hex	filename
    528	      8	   1568	   2104	    838	0-led-toggle-addr.elf
Finished building: default.size.stdout
Finished building: 0-led-toggle-addr.bin
 
Finished building: 0-led-toggle-addr.list
 
 
21:51:23 **** Incremental Build of configuration Debug for project 0-led-toggle-addr ****
make -j16 all 
arm-none-eabi-size   0-led-toggle-addr.elf 
   text	   data	    bss	    dec	    hex	filename
    528	      8	   1568	   2104	    838	0-led-toggle-addr.elf
Finished building: default.size.stdout
 
21:53:13 **** Incremental Build of configuration Debug for project 0-led-toggle-addr ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DSTM32F030R8Tx -DSTM32 -DSTM32F0 -DNUCLEO_F030R8 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "0-led-toggle-addr.elf" @"objects.list"   -mcpu=cortex-m0 -T"/home/rgr/Dropbox/homefiles/directories/development/education/Udemy/embedded-systems-bare-metal-programming/stm32f030r8/0-led-toggle-addr/STM32F030R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="0-led-toggle-addr.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 0-led-toggle-addr.elf
 
arm-none-eabi-size   0-led-toggle-addr.elf 
arm-none-eabi-objdump -h -S  0-led-toggle-addr.elf  > "0-led-toggle-addr.list"
arm-none-eabi-objcopy  -O binary  0-led-toggle-addr.elf  "0-led-toggle-addr.bin"
   text	   data	    bss	    dec	    hex	filename
    556	      8	   1568	   2132	    854	0-led-toggle-addr.elf
Finished building: default.size.stdout
 
Finished building: 0-led-toggle-addr.bin
 
Finished building: 0-led-toggle-addr.list
 
